<resources>
    <string name="app_name">feedback4me</string>
    <string name="feedback4me_logo">feedback4me logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="turn_on_notifications">Turn On Notifications</string>
    <string name="allow_feedback_on_profile">Allow Feedback on Profile</string>
    <string name="allow_anonymous_mode">Allow Anonymous Mode Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="search">Search</string>
    <string name="change_profile_picture">Change Profile Photo</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="sign_up">Sign Up!</string>
    <string name="birth_date">Birth Date</string>
    <string name="user_avatar">User Avatar</string>
    <string name="enter_feedback_for_user">Enter your feedback</string>
    <string name="anonymous">Anonymous</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="negative">Negative</string>
    <string name="neutral">Neutral</string>
    <string name="positive">Positive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="username_photo">Username Photo</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="impression_photo">Impression Photo</string>
    <string name="author_photo">Author Photo</string>
    <string name="author">Author</string>
    <string name="feedback_text">Feedback text</string>
    <string name="date">Date</string>
    <string name="change_birth_date">Change Birth Date</string>
</resources>
